--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.15",
     "mustache": "^3.1.0",
     "rxjs": "^6.5.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.149",
     "@types/mustache": "^0.8.32",
     "@types/node": "^12.12.14",
     "copyfiles": "^2.1.1",
