--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clear": "^0.1.0",
     "commander": "^4.0.1",
     "figlet": "^1.2.4",
+    "global-modules-path": "^2.3.1",
     "lodash": "^4.17.15",
     "mustache": "^3.1.0",
     "path": "^0.12.7",
@@ -30,6 +31,9 @@
     "@angular/common": "^8.2.14",
     "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
+    "@types/clear": "^0.1.0",
+    "@types/figlet": "^1.2.0",
+    "@types/global-modules-path": "^2.3.0",
     "@types/lodash": "^4.14.149",
     "@types/mustache": "^0.8.32",
     "@types/node": "^12.12.17",
